--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
+    "vue-sweetalert2": "^3.0.8",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
